tests/org.eclipse.php.core.tests/workspace/errors/php81/enum03.pdtt
--TEST--
New in initializers
--FILE--
<?php
class MyClass {
	case X;
}
?>
--EXPECT--
[line=3, start=28, end=29] Enum case can only be used in enums
